--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,13 @@ a {
   width: 25%;
 }
 
+.photography {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
 .name {
   display: block;
   margin: 10px;
@@ -46,7 +53,26 @@ a {
   color: white;
 }
 
+.photography-text {
+  color: white;
+  font-size: 1.5vw;
+  text-align: center;
+}
+
+.back-button {
+  font: Helvetic Neue;
+  font-size: 1.5vw;
+  font-weight: bold;
+  color: #262626;
+}
+
 #portrait-div {
+  margin-top: 2%;
+  width: 100%;
+  text-align: center;
+}
+
+#photo-div {
   margin-top: 2%;
   width: 100%;
   text-align: center;
