About Me and Contact pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ a {
   width: 25%;
 }
 
-.photography {
+.page-photo {
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
@@ -53,17 +53,32 @@ a {
   color: white;
 }
 
-.photography-text {
+.page-text {
+  max-width: 75%;
   color: white;
   font-size: 1.5vw;
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .back-button {
   font: Helvetic Neue;
   font-size: 1.5vw;
   font-weight: bold;
-  color: #262626;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  color: #363636;
+}
+
+.link {
+  color: #636d7d;
+}
+
+.linkedin {
+  font: Helvetic Neue;
+  font-size: 1.5vw;
+  color: #636d7d;
 }
 
 #portrait-div {
@@ -72,7 +87,7 @@ a {
   text-align: center;
 }
 
-#photo-div {
+#page-div {
   margin-top: 2%;
   width: 100%;
   text-align: center;
